<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.example.user.CourtCunterApp.MainActivity">

    <LinearLayout
        android:id="@+id/main_linear_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="top|center"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/team_a_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/team_a"
                    android:textSize="@dimen/team_name_text_size"
                     />

                <TextView
                    android:id="@+id/team_a_score_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/score_deatils_team_a"
                    android:textSize="@dimen/score_text_size"
                    />

                <TextView
                    android:id="@+id/over_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/over_deatils_team_a"
                    android:textSize="@dimen/over_text_size"
                    />

                <TextView
                    android:id="@+id/run_rate_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/run_rate_details_team_a"
                    android:textSize="@dimen/run_rate_text_size"
                   />

            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#DC1842"
                android:rotation="-10"
                android:layout_marginTop="@dimen/run_rate_text_size"
                 />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_b_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/team_b"
                    android:textSize="@dimen/team_name_text_size" />

                <TextView
                    android:id="@+id/team_b_score_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/score_details_team_b"
                    android:textSize="@dimen/score_text_size" />

                <TextView
                    android:id="@+id/team_b_over_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/over_details_team_b"
                    android:textSize="@dimen/over_text_size" />

                <TextView
                    android:id="@+id/team_b_run_rate_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/run_rate_details_team_b"
                    android:textSize="@dimen/run_rate_text_size" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/stats_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_between_button"
            android:gravity="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/start_inning_button_id"
            style="@style/ButtonPreview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:onClick="startInning"
            android:text="@string/start_inning" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:baselineAligned="false"
                android:orientation="vertical">

                <Button
                    android:id="@+id/dot_ball_button_id"
                    style="@style/ButtonPreview"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:onClick="dotBall"
                    android:text="@string/dot_ball" />

                <Button
                    android:id="@+id/two_run_button_id"
                    style="@style/ButtonPreview"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:onClick="twoRun"
                    android:text="@string/run_two" />

                <Button
                    android:id="@+id/four_run_button_id"
                    style="@style/ButtonPreview"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:onClick="FourRun"
                    android:text="@string/run_four" />

                <Button
                    android:id="@+id/wide_button_id"
                    style="@style/ButtonPreview"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:onClick="wideBall"
                    android:text="@string/wide"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/one_run_button_id"
                    style="@style/ButtonPreview"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:onClick="oneRun"
                    android:text="@string/run_one" />

                <Button
                    android:id="@+id/three_run_button_id"
                    style="@style/ButtonPreview"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:onClick="threeRun"
                    android:text="@string/run_three" />

                <Button
                    android:id="@+id/six_run_button_id"
                    style="@style/ButtonPreview"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:onClick="sixRun"
                    android:text="@string/run_six" />

                <Button
                    android:id="@+id/no_ball_button_id"
                    style="@style/ButtonPreview"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:onClick="noBall"
                    android:text="@string/no_ball"
                    android:textAllCaps="false" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/wicket_button_id"
            style="@style/ButtonPreview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:onClick="wicketDown"
            android:text="@string/wicket" />

    </LinearLayout>

    <Button
        style="@style/ButtonPreview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/space_between_button"
        android:onClick="resetScore"
        android:text="@string/reset_score" />

</RelativeLayout>


